Fix size on mobile:

--- a/index.css
+++ b/index.css
@@ -27,6 +27,6 @@ ul, li {
 
 #game_canvas {
 	background-color: gray;
-	width: 640px; 
-	height: 1136px;
+	width: 320px; 
+	height: 568px;
 }
